--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref @ file:///home/conda/feedstock_root/build_artifacts/asgiref_173321560753
 dj-database-url==3.0.1
 Django @ file:///home/conda/feedstock_root/build_artifacts/django_1749571466758/work
 et_xmlfile==2.0.0
+gunicorn==23.0.0
 numpy==2.3.1
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.0
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
